fixed alignment issue of tradedesk

--- a/app/assets/stylesheets/campaign_create.less
+++ b/app/assets/stylesheets/campaign_create.less
@@ -1465,6 +1465,7 @@
           margin: 10px auto 10px;
           display: table;
           max-height: 32px;
+          min-height: 32px;
           max-width: 210px;
         }
         .btn {
